# zametki-tg

./: .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: a085f48d2d60_initial_tables.py  b0de903a594e_initial_tables.py  dd765d2371c7_add_tag.py
app/: app.py  celery_app.py  database.py  models.py  schemas.py  tasks.py
app/routers/: api_router.py  intro.py  zametki.py
tests/: api_test.py  conftest.py
